--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <meta property="og:url" content="https://marktix.cl">
   <meta property="og:title" content="MARKTIX – Marketing Digital, Diseño Web y Producción Audiovisual">
   <meta property="og:description" content="Socio estratégico para la transformación digital de tu empresa. Fusionamos estrategia, desarrollo de vanguardia y producción audiovisual de alto impacto.">
-  <meta property="og:image" content="https://marktix.cl/images/og-image.jpg">
+  <meta property="og:image" content="https://marktix.cl/images/marktixlogo.jpg">
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="630">
   <meta property="og:image:alt" content="MARKTIX - Transformación Digital para Empresas">
@@ -30,7 +30,7 @@
   <meta property="twitter:url" content="https://marktix.cl">
   <meta property="twitter:title" content="MARKTIX – Marketing Digital, Diseño Web y Producción Audiovisual">
   <meta property="twitter:description" content="Socio estratégico para la transformación digital de tu empresa. Fusionamos estrategia, desarrollo de vanguardia y producción audiovisual.">
-  <meta property="twitter:image" content="https://marktix.cl/images/twitter-card.jpg">
+  <meta property="twitter:image" content="https://marktix.cl/images/marktixlogo.jpg">
   <meta property="twitter:image:alt" content="MARKTIX - Transformación Digital para Empresas">
   <meta name="twitter:creator" content="@marktix_cl">
   <meta name="twitter:site" content="@marktix_cl">
@@ -48,10 +48,10 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   
   <!-- Favicon -->
-  <link rel="icon" type="image/x-icon" href="/favicon.ico">
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/jpeg" href="/images/marktixlogo.jpg">
+  <link rel="icon" type="image/jpeg" sizes="32x32" href="/images/marktixlogo.jpg">
+  <link rel="icon" type="image/jpeg" sizes="16x16" href="/images/marktixlogo.jpg">
+  <link rel="apple-touch-icon" sizes="180x180" href="/images/marktixlogo.jpg">
   <link rel="manifest" href="/site.webmanifest">
   
   <!-- Schema.org structured data -->
@@ -62,7 +62,7 @@
     "name": "MARKTIX",
     "description": "Capacitamos a empresas para que dominen el panorama digital, fusionando estrategia de marketing, desarrollo web de vanguardia y producción audiovisual de alto impacto.",
     "url": "https://marktix.cl",
-    "logo": "https://marktix.cl/images/logo.png",
+    "logo": "https://marktix.cl/images/marktixlogo.jpg",
     "contactPoint": {
       "@type": "ContactPoint",
       "telephone": "+56973507800",
@@ -131,8 +131,8 @@
     .nav{display:flex;align-items:center;justify-content:space-between;padding:.9rem 0;transition:padding 0.3s ease}
     .nav__brand{display:flex;align-items:center;gap:.8rem;font-weight:800;letter-spacing:.2px;transition:transform 0.2s ease}
     .nav__brand:hover{transform:scale(1.05)}
-    .brand__logo{width:36px;height:36px;border-radius:10px;background:var(--grad);box-shadow:0 0 0 6px rgba(255,122,24,.08);transition:box-shadow 0.3s ease, transform 0.2s ease}
-    .nav__brand:hover .brand__logo{box-shadow:0 0 0 8px rgba(255,122,24,.12);transform:rotate(5deg)}
+    .brand__logo{width:40px;height:40px;border-radius:10px;transition:transform 0.2s ease;object-fit:contain}
+    .nav__brand:hover .brand__logo{transform:rotate(5deg)}
     .nav__links{display:flex;gap:1rem}
     .nav__links a{padding:.6rem .9rem;border-radius:10px;color:var(--muted);transition:all 0.3s ease;position:relative;overflow:hidden}
     .nav__links a::before{content:'';position:absolute;top:0;left:-100%;width:100%;height:100%;background:linear-gradient(90deg, transparent, rgba(255,122,24,.1), transparent);transition:left 0.5s ease;z-index:-1}
@@ -215,9 +215,16 @@
     .hero{position:relative;padding:4.2rem 0 3.2rem;border-bottom:1px solid var(--border);overflow:hidden}
     .hero::before{content:"";position:absolute;inset:-20% -20% auto auto;width:60vw;height:60vw;min-height:420px;filter:blur(90px);background:radial-gradient(60% 60% at 50% 50%,rgba(255,122,24,.25),rgba(255,183,3,.12) 60%, transparent 70%);pointer-events:none}
     .hero .grid{display:grid;grid-template-columns:1.1fr .9fr;gap:2rem;align-items:center}
+    .hero-logo-title{display:flex;align-items:center;gap:1rem;margin-bottom:1rem;flex-wrap:wrap}
+    .hero-logo{width:60px;height:60px;border-radius:12px;object-fit:contain;box-shadow:0 4px 12px rgba(0,0,0,.2)}
     @media (max-width: 920px){
       .hero .grid{grid-template-columns:1fr;text-align:center}
       .hero::before{width:80vw;height:80vw;inset:-30% -40% auto auto}
+      .hero-logo-title{justify-content:center}
+    }
+    @media (max-width: 480px){
+      .hero-logo{width:50px;height:50px}
+      .hero-logo-title{gap:.8rem}
     }
     .eyebrow{margin-bottom:1rem}
     h1{font-size:clamp(2.2rem, 5vw, 3.6rem);line-height:1.05;margin:0 0 1rem}
@@ -356,7 +363,7 @@
   <header class="site" x-data="{ mobileMenuOpen: false }">
     <div class="container nav">
       <a href="#inicio" class="nav__brand" aria-label="Ir al inicio">
-        <span class="brand__logo" aria-hidden="true"></span>
+        <img src="images/marktixlogo.jpg" alt="MARKTIX Logo" class="brand__logo">
         <span>MARKTIX</span>
       </a>
       <nav class="nav__links" aria-label="Navegación principal">
@@ -405,7 +412,10 @@
     <div class="container grid">
       <div>
         <div class="eyebrow chip">El negocio del mañana <b>empieza hoy</b></div>
-        <h1><span style="background:var(--grad);-webkit-background-clip:text;background-clip:text;color:transparent">Socio estratégico</span> para la transformación digital de tu empresa.</h1>
+        <div style="display: flex; align-items: center; gap: 1rem; margin-bottom: 1rem;">
+          <img src="images/marktixlogo.jpg" alt="MARKTIX Logo" style="width: 60px; height: 60px; border-radius: 12px; object-fit: contain;">
+          <h1><span style="background:var(--grad);-webkit-background-clip:text;background-clip:text;color:transparent">Socio estratégico</span> para la transformación digital de tu empresa.</h1>
+        </div>
         <p class="lead">Fusionamos estrategia, desarrollo de vanguardia y producción audiovisual de alto impacto para conectar con tu audiencia y construir tu éxito online.</p>
         <div class="hero__actions">
           <a class="btn btn--primary" href="#servicios">Nuestros Servicios</a>
@@ -616,7 +626,10 @@
 
   <footer>
     <div class="container foot">
-      <div>© 2025 <strong>MARKTIX</strong>. Todos los derechos reservados.</div>
+      <div style="display: flex; align-items: center; gap: 0.5rem;">
+        <img src="images/marktixlogo.jpg" alt="MARKTIX Logo" style="width: 24px; height: 24px; border-radius: 6px; object-fit: contain;">
+        <span>© 2025 <strong>MARKTIX</strong>. Todos los derechos reservados.</span>
+      </div>
       <div style="margin-left:auto;" class="social-links">
         <a href="https://www.instagram.com/marktix_cl?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank" aria-label="Instagram">Instagram</a>
         <a href="https://www.youtube.com/@marktix" target="_blank" aria-label="YouTube">YouTube</a>
