--- a/index.html
+++ b/index.html
@@ -741,7 +741,7 @@
       </div>
     </div>
   </section>
-
+<!-- Hola que tal -->
   <section id="socios">
     <div class="container">
         <div class="section__head">
