--- a/index.html
+++ b/index.html
@@ -680,7 +680,7 @@
     .service .title{display:flex;align-items:center;gap:.6rem;margin:0 0 .4rem;font-weight:700}
     .service-image{width:100%;height:180px;object-fit:cover;border-radius:12px;margin-bottom:1rem;border:1px solid var(--border)}
     /* clientes y socios */
-    .logos{display:grid;grid-template-columns:repeat(3,1fr);gap:1rem;align-items:center;max-width:600px;margin:0 auto}
+    .logos{display:grid;grid-template-columns:repeat(auto-fit,minmax(150px,1fr));gap:1rem;align-items:center;max-width:900px;margin:0 auto}
     .logo{height:60px;border:1px solid var(--border);border-radius:12px;display:grid;place-items:center;background:#121216;font-weight:600;color:#e0e0e0;letter-spacing:.5px; font-size: 0.9rem; text-align: center; padding: 1rem 0.8rem;transition:all 0.3s ease}
     .logo:hover{background:#1a1a20;border-color:rgba(255,122,24,.3);transform:translateY(-2px);box-shadow:0 4px 12px rgba(0,0,0,.2)}
     
@@ -1081,6 +1081,21 @@
             </div>
             <div class="partner-card">
               <img src="images/filmora.avif" alt="Filmora Pro Logo" />
+            </div>
+            <div class="partner-card">
+              <img src="images/Google-AdWords-Logo.png" alt="Google Ads Logo" />
+            </div>
+            <div class="partner-card">
+              <img src="images/Logo_Google_Analytics.svg.png" alt="Google Analytics Logo" />
+            </div>
+            <div class="partner-card">
+              <img src="images/HubSpot_Logo.svg.png" alt="HubSpot Logo" />
+            </div>
+            <div class="partner-card">
+              <img src="images/what-is-gtm.webp" alt="Google Tag Manager Logo" />
+            </div>
+            <div class="partner-card">
+              <img src="images/googlemarketing platform.png" alt="Google Marketing Platform Logo" />
             </div>
         </div>
     </div>
